Fixed item list spacing and renamed type to direction.

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/00-base/item-list/item-list.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/00-base/item-list/item-list.scss
@@ -5,29 +5,27 @@
 .civictheme-item-list {
   $root: &;
 
-  &.civictheme-type-horizontal {
+  #{$root}__list {
+    list-style: none;
+  }
 
+  &--horizontal {
     #{$root}__list {
       display: flex;
-      list-style: none;
     }
 
     #{$root}__list__item {
       margin-right: civictheme-space(2);
-      margin-bottom: auto;
     }
   }
 
-  &.civictheme-type-vertical {
-
+  &--vertical {
     #{$root}__list {
       display: inline-block;
-      list-style: none;
     }
 
     #{$root}__list__item {
-      margin-right: civictheme-space(2);
-      margin-bottom: auto;
+      margin-bottom: civictheme-space(2);
     }
   }
 }
